--- a/src/components/atoms/Input/Input.module.css
+++ b/src/components/atoms/Input/Input.module.css
@@ -64,3 +64,13 @@
   margin-top: -2px;
 }
 
+/* add to Input.module.css and Textarea.module.css */
+.error {
+  border-color: var(--error);
+  box-shadow: 0 0 0 3px rgba(255, 0, 0, 0.08);
+}
+
+.disabled {
+  opacity: 0.7;
+  pointer-events: none;
+}
