--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -39,3 +39,53 @@ textarea,
 label {
   font-family: var(--font-inter);
 }
+
+.container {
+  width: 92%;
+  max-width: 1280px;
+  margin: 0 auto;
+}
+
+img {
+  width: 100%;
+  height: auto;
+}
+
+.responsive-img {
+  width: 100%;
+  height: 220px;
+  object-fit: cover;
+  border-radius: 12px;
+}
+
+:root {
+  --fs-xl: clamp(1.6rem, 2vw + 1rem, 3rem);
+  --fs-lg: clamp(1.3rem, 1.3vw + 1rem, 2.4rem);
+  --fs-md: clamp(1rem, .8vw + .9rem, 1.4rem);
+  --fs-sm: clamp(.9rem, .4vw + .85rem, 1rem);
+}
+
+h1 {
+  font-size: var(--fs-xl);
+}
+
+h2 {
+  font-size: var(--fs-lg);
+}
+
+h3 {
+  font-size: var(--fs-md);
+}
+
+p {
+  font-size: var(--fs-sm);
+}
+
+/* Phones */
+@media (max-width: 480px) {}
+
+/* Large phones / small tablets */
+@media (max-width: 768px) {}
+
+/* Tablets / small laptops */
+@media (max-width: 1024px) {}
